<resources>
    <string name="app_name">startup_app</string>
    <string name="_konnect">Connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="Click">Click</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="minimum_password">min length of password 6</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="programming">Programming</string>
    <string name="Medical">Medical</string>
    <string name="Netflix">Netflix</string>
    <string name="darkHumour">Dark Humour</string>
    <string name="reading">Reading</string>
    <string name="sarcasm">Sarcasm</string>
    <string name="workout">Workout</string>
    <string name="Music">Music</string>
    <string name="friend">Friends</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="sent">Sent</string>
    <string name="post">Post</string>
    <string name="postfromgallery">Post from Gallery</string>
    <string name="writeablog">Write a Blog</string>
    <string name="directocamera">Redirect to Camera</string>
    <string name="reply">Reply</string>
</resources>