<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post_things">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/writeablog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/writeablog"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_below="@+id/writeablog"
        android:id="@+id/postfromgallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/postfromgallery"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_below="@+id/postfromgallery"
        android:id="@+id/dircettocamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/directocamera" />
</RelativeLayout>

</FrameLayout>