<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".see_profile">

    <ImageView
        android:id="@+id/header_cover_image"
        android:layout_width="413dp"
        android:layout_height="416dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerCrop"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profile_background_image" />

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/profile_image_other"
        android:layout_width="179dp"
        android:layout_height="154dp"

        android:layout_below="@+id/header_cover_image"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:clickable="true"
        android:elevation="5dp"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="48dp"
        android:text="@string/name"
        android:textColor="#fff"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_other" />



    <Button
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="80dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:text="@string/_konnect"
        app:layout_constraintBaseline_toBaselineOf="@+id/message"
        app:layout_constraintStart_toEndOf="@+id/message" />
</androidx.constraintlayout.widget.ConstraintLayout>